--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "firebase": "^10.6.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.19.0"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
