--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
